--- a/TA-musubu-for-splunk/default/data/ui/views/musubu_main.xml
+++ b/TA-musubu-for-splunk/default/data/ui/views/musubu_main.xml
@@ -22,6 +22,7 @@
 <hr/>
         <h1>Getting Started:</h1>
         <p>Below are the steps required to begin using the app.</p>
+        <strong><p>Request a Trial <a href="mailto:support@musubu.io?subject=Musubu%20For%20Splunk%20App%20-%20Request%20Trial%20Key" target="_blank">Musubu API Key Here</a>.</p></strong>
         <ul>
           <li>
             <strong>Step 1.</strong> Enter your Musubu API Key on the Configuration Tab. If you access the internet via a proxy, enter your proxy information on the configuration tab as well.</li>
